ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.11, 3.6.0-rc0
    • Affects Version/s: 3.4.2
    • Component/s: Shell
    • None
    • Fully Compatible
    • ALL
    • v3.4
    • Hide

      OS: CentOS Linux release 7.1.1503 (Core)

      Just run this line.
      mongo --host rs0/machine48 management some.js

      Show
      OS: CentOS Linux release 7.1.1503 (Core) Just run this line. mongo --host rs0/machine48 management some.js
    • Platforms 2017-07-31, Platforms 2017-09-11, Platforms 2017-10-02, Platforms 2017-10-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      rIt seems like there's a regression bug

      Prior to 3.4.2 this command succeeded:
      mongo --host rs0/machine48 management some.js

      The current output I'm getting is:

      MongoDB shell version v3.4.2
      connecting to: mongodb://rs0/machine48:27017/management
      2017-02-22T19:49:33.827+0200 E QUERY [thread1] Error: Failed to parse mongodb:// URL: mongodb://rs0/machine48:27017/management :
      connect@src/mongo/shell/mongo.js:237:13
      @(connect):1:6
      exception: connect failed

            Assignee:
            Sara Golemon (Inactive)
            Reporter:
            Tom Leibu
            Votes:
            3 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: