SERVER-28072 Construct mongodb:// URI from RS string and dbname